# socket-sdk-python

./: .gitignore  LICENSE  Pipfile  README.rst  context7.json  example-socket-export.py  pyproject.toml  setup.cfg  test_allow_unverified.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  feature.md  improvement.md
.github/actions/setup-hatch/: action.yml
.github/actions/setup-sfw/: action.yml
.github/workflows/: dependabot-review.yml  dependency-review.yml  pr-preview.yml  release.yml  version-check.yml
.hooks/: sync_version.py
scripts/: build.sh  deploy-test-pypi.sh
socketdev/: __init__.py  exceptions.py  log.py  socket_classes.py  version.py
socketdev/alertfullscansearch/: __init__.py
socketdev/alerts/: __init__.py
socketdev/alerttypes/: __init__.py
socketdev/analytics/: __init__.py
socketdev/apitokens/: __init__.py
socketdev/auditlog/: __init__.py
socketdev/basics/: __init__.py
socketdev/basics/__pycache__/: .gitkeep
socketdev/core/: api.py  classes.py  dedupe.py  issues.py
socketdev/dependencies/: __init__.py
socketdev/diffscans/: __init__.py
socketdev/export/: __init__.py
socketdev/fixes/: __init__.py
socketdev/fullscans/: __init__.py
socketdev/historical/: __init__.py
socketdev/labels/: __init__.py
socketdev/licensemetadata/: __init__.py
socketdev/npm/: __init__.py
socketdev/openapi/: __init__.py
socketdev/org/: __init__.py
socketdev/purl/: __init__.py
socketdev/quota/: __init__.py
socketdev/report/: __init__.py
socketdev/repos/: __init__.py
socketdev/repositories/: __init__.py
socketdev/sbom/: __init__.py
socketdev/settings/: __init__.py
socketdev/supportedfiles/: __init__.py
socketdev/telemetry/: __init__.py
socketdev/threatfeed/: __init__.py
socketdev/tools/: __init__.py
socketdev/triage/: __init__.py
socketdev/uploadmanifests/: __init__.py
socketdev/utils/: __init__.py
socketdev/webhooks/: __init__.py
tests/: README.md  conftest.py  run_tests.py  test_diffscans.py
tests/integration/: test_all_endpoints.py  test_comprehensive_integration.py  test_diffscans_integration.py  test_new_endpoints.py
tests/unit/: __init__.py  test_all_endpoints_unit.py  test_dedupe.py  test_exceptions.py  test_issues_did_you_mean_props.py  test_issues_gpt_did_you_mean.py  test_socket_alert_category.py  test_socket_sdk_unit.py  test_upload_manifests.py  test_working_endpoints_unit.py
