[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "socket-sdk-python"
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    'requests'
]
readme = "README.rst"
description = "Socket Security Python SDK"
keywords = ["socketsecurity", "socket.dev", "sca", "oss", "security", "sdk"]
authors = [
    {name = "Douglas Coburn", email = "douglas@socket.dev"}
]
maintainers = [
    {name = "Douglas Coburn", email = "douglas@socket.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Homepage = "https://github.com/SocketDev/socket-sdk-python"

[tool.setuptools.packages.find]
include = [
    "socketsecurity",
    "socketsecurity.core"
]

[tool.setuptools.dynamic]
version = {attr = "socketdev.__version__"}