[metadata]

name = socketdev-sdk
version = 0.0.1
author = Douglas Coburn
author_email = douglas@dactbc.com
description = A python SDK for the socket.dev API
long_description = file: README.rst
long_description_content_type: text/x-rst
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    requests